--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "webpack-dev-server",
     "lint": "eslint src",
     "prebuild": "rimraf dist",
-    "build":
-      "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
+    "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
     "postbuild": "copyfiles index.html docs"
   },
   "repository": {
@@ -68,6 +67,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.2.0",
     "redux-thunk": "^2.2.0",
     "styled-components": "^2.2.3"
   }
