--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
+    "firebase": "^4.7.0",
     "history": "^4.7.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
